--- a/rms_status_frontend/public/index.html
+++ b/rms_status_frontend/public/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/nanumgothic.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="rms-status"
-    />
+    <meta name="description" content="rms-status" />
     <title>RMS STATUS</title>
   </head>
   <body>
